# vgmstream

./: .gitignore  CMakeLists.txt  version.cmake
audacious/: CMakeLists.txt  Makefile.autotools.am  plugin.cc  plugin.h  vfs.cc
cli/: CMakeLists.txt  vgmstream123.c  vgmstream_cli.c
dependencies-cmake/: CMakeLists.txt
dependencies-cmake/ao/: .gitignore  CMakeLists.txt
dependencies-cmake/foobar2000/: CMakeLists.txt
dependencies-cmake/wtl/: .gitignore  CMakeLists.txt
ext_libs/: CMakeLists.txt
ext_libs/Getopt/: CMakeLists.txt
fb2k/: CMakeLists.txt  foo_vgmstream.cpp
src/: CMakeLists.txt
src/meta/: baf.c
winamp/: CMakeLists.txt  in_vgmstream.c
xmplay/: CMakeLists.txt
