cmake_minimum_required(VERSION 2.6)

set(HEADERS
  coding/acm_decoder_libacm.h
  coding/coding.h
  coding/ea_mt_decoder_utk.h
  coding/g72x_state.h
  coding/mpeg_decoder.h
  coding/nwa_decoder.h
  coding/vorbis_custom_data_fsb.h
  coding/vorbis_custom_data_wwise.h
  coding/vorbis_custom_decoder.h
  layout/layout.h
  meta/aax_utf.h
  meta/adx_keys.h
  meta/aix_streamfile.h
  meta/awc_xma_streamfile.h
  meta/bar_streamfile.h
  meta/ea_eaac_streamfile.h
  meta/ea_schl_streamfile.h
  meta/fsb5_interleave_streamfile.h
  meta/fsb_interleave_streamfile.h
  meta/fsb_keys.h
  meta/hca_keys.h
  meta/hca_keys_awb.h
  meta/kma9_streamfile.h
  meta/meta.h
  meta/opus_interleave_streamfile.h
  meta/ppst_streamfile.h
  meta/ubi_bao_streamfile.h
  meta/ubi_lyn_ogg_streamfile.h
  meta/ubi_sb_streamfile.h
  meta/vsv_streamfile.h
  meta/xvag_streamfile.h
  meta/zsnd_streamfile.h
  plugins.h
  streamfile.h
  streamtypes.h
  util.h
  vgmstream.h
)

set(SOURCES
  coding/acm_decoder.c
  coding/acm_decoder_decode.c
  coding/acm_decoder_util.c
  coding/adx_decoder.c
  coding/asf_decoder.c
  coding/at3plus_decoder.c
  coding/atrac9_decoder.c
  coding/celt_fsb_decoder.c
  coding/circus_decoder.c
  coding/coding_utils.c
  coding/derf_decoder.c
  coding/ea_mt_decoder.c
  coding/ea_xa_decoder.c
  coding/ea_xas_decoder.c
  coding/fadpcm_decoder.c
  coding/ffmpeg_decoder.c
  coding/ffmpeg_decoder_custom_opus.c
  coding/g719_decoder.c
  coding/g721_decoder.c
  coding/g7221_decoder.c
  coding/hca_decoder.c
  coding/ima_decoder.c
  coding/l5_555_decoder.c
  coding/lsf_decoder.c
  coding/mc3_decoder.c
  coding/mp4_aac_decoder.c
  coding/mpeg_custom_utils.c
  coding/mpeg_custom_utils_ahx.c
  coding/mpeg_custom_utils_awc.c
  coding/mpeg_custom_utils_ealayer3.c
  coding/mpeg_custom_utils_eamp3.c
  coding/mpeg_decoder.c
  coding/msadpcm_decoder.c
  coding/mta2_decoder.c
  coding/mtaf_decoder.c
  coding/nds_procyon_decoder.c
  coding/ngc_afc_decoder.c
  coding/ngc_dsp_decoder.c
  coding/ngc_dtk_decoder.c
  coding/nwa_decoder.c
  coding/ogg_vorbis_decoder.c
  coding/oki_decoder.c
  coding/pcm_decoder.c
  coding/psv_decoder.c
  coding/psx_decoder.c
  coding/sassc_decoder.c
  coding/sdx2_decoder.c
  coding/vorbis_custom_decoder.c
  coding/vorbis_custom_utils_fsb.c
  coding/vorbis_custom_utils_ogl.c
  coding/vorbis_custom_utils_sk.c
  coding/vorbis_custom_utils_vid1.c
  coding/vorbis_custom_utils_wwise.c
  coding/ws_decoder.c
  coding/xa_decoder.c
  coding/xmd_decoder.c
  coding/yamaha_decoder.c
  formats.c
  layout/aix_layout.c
  layout/blocked.c
  layout/blocked_adm.c
  layout/blocked_ast.c
  layout/blocked_awc.c
  layout/blocked_bdsp.c
  layout/blocked_caf.c
  layout/blocked_dec.c
  layout/blocked_ea_1snh.c
  layout/blocked_ea_schl.c
  layout/blocked_ea_sns.c
  layout/blocked_ea_swvr.c
  layout/blocked_ea_wve_ad10.c
  layout/blocked_ea_wve_au00.c
  layout/blocked_filp.c
  layout/blocked_gsb.c
  layout/blocked_h4m.c
  layout/blocked_halpst.c
  layout/blocked_hwas.c
  layout/blocked_ivaud.c
  layout/blocked_matx.c
  layout/blocked_mul.c
  layout/blocked_mxch.c
  layout/blocked_ps2_iab.c
  layout/blocked_rws.c
  layout/blocked_sthd.c
  layout/blocked_str_snds.c
  layout/blocked_thp.c
  layout/blocked_tra.c
  layout/blocked_vawx.c
  layout/blocked_vgs.c
  layout/blocked_vs.c
  layout/blocked_vs_square.c
  layout/blocked_vs_str.c
  layout/blocked_ws_aud.c
  layout/blocked_wsi.c
  layout/blocked_xa.c
  layout/blocked_xa_aiff.c
  layout/blocked_xvag.c
  layout/blocked_xvas.c
  layout/flat.c
  layout/interleave.c
  layout/layered.c
  layout/segmented.c
  meta/2dx9.c
  meta/a2m.c
  meta/aax.c
  meta/acm.c
  meta/adpcm_capcom.c
  meta/ads.c
  meta/adx.c
  meta/afc.c
  meta/agsc.c
  meta/ahv.c
  meta/ahx.c
  meta/aif_asobo.c
  meta/aifc.c
  meta/aix.c
  meta/akb.c
  meta/ao.c
  meta/apc.c
  meta/apple_caff.c
  meta/asf.c
  meta/ast.c
  meta/atsl.c
  meta/atx.c
  meta/aus.c
  meta/awc.c
  meta/baf.c
  meta/bar.c
  meta/bcstm.c
  meta/bfstm.c
  meta/bfwav.c
  meta/bgw.c
  meta/bik.c
  meta/bnk_sony.c
  meta/bnsf.c
  meta/brstm.c
  meta/btsnd.c
  meta/caf.c
  meta/capdsp.c
  meta/ck.c
  meta/csmp.c
  meta/cstr.c
  meta/dc_asd.c
  meta/dc_dcsw_dcs.c
  meta/dc_idvi.c
  meta/dc_kcey.c
  meta/dc_str.c
  meta/dec.c
  meta/derf.c
  meta/dmsg_segh.c
  meta/dsp_adx.c
  meta/dsp_bdsp.c
  meta/ea_1snh.c
  meta/ea_eaac.c
  meta/ea_schl.c
  meta/ea_schl_fixed.c
  meta/ea_swvr.c
  meta/ea_wve_ad10.c
  meta/ea_wve_au00.c
  meta/exakt_sc.c
  meta/excitebots.c
  meta/ezw.c
  meta/fag.c
  meta/ffmpeg.c
  meta/ffw.c
  meta/flx.c
  meta/fsb.c
  meta/fsb5.c
  meta/fsb_encrypted.c
  meta/g1l.c
  meta/gca.c
  meta/gcsw.c
  meta/genh.c
  meta/gin.c
  meta/gsp_gsb.c
  meta/gtd.c
  meta/h4m.c
  meta/halpst.c
  meta/hca.c
  meta/hd3_bd3.c
  meta/his.c
  meta/idsp_ie.c
  meta/imc.c
  meta/ios_psnd.c
  meta/ish_isd.c
  meta/ivaud.c
  meta/ivb.c
  meta/kma9.c
  meta/kraw.c
  meta/ktss.c
  meta/lsf.c
  meta/mattel_hyperscan.c
  meta/maxis_xa.c
  meta/mc3.c
  meta/mca.c
  meta/mib_mih.c
  meta/mn_str.c
  meta/mogg.c
  meta/mp4.c
  meta/msb_msh.c
  meta/msf_banpresto.c
  meta/msf_tamasoft.c
  meta/mss.c
  meta/msv.c
  meta/msvp.c
  meta/mul.c
  meta/mus_acm.c
  meta/musc.c
  meta/musx.c
  meta/myspd.c
  meta/naac.c
  meta/naomi_adpcm.c
  meta/naomi_spsd.c
  meta/nds_hwas.c
  meta/nds_rrds.c
  meta/nds_sad.c
  meta/nds_strm.c
  meta/nds_strm_ffta2.c
  meta/nds_swav.c
  meta/ngc_adpdtk.c
  meta/ngc_bh2pcm.c
  meta/ngc_dsp_konami.c
  meta/ngc_dsp_mpds.c
  meta/ngc_dsp_std.c
  meta/ngc_dsp_ygo.c
  meta/ngc_ffcc_str.c
  meta/ngc_gcub.c
  meta/ngc_lps.c
  meta/ngc_nst_dsp.c
  meta/ngc_pdt.c
  meta/ngc_sck_dsp.c
  meta/ngc_ssm.c
  meta/ngc_str_cauldron.c
  meta/ngc_tydsp.c
  meta/ngc_ulw.c
  meta/ngc_vid1.c
  meta/ngc_ymf.c
  meta/ngca.c
  meta/nub_idsp.c
  meta/nub_vag.c
  meta/nub_xma.c
  meta/nus3audio.c
  meta/nus3bank.c
  meta/nwa.c
  meta/nwav.c
  meta/nxa.c
  meta/nxap.c
  meta/ogg_opus.c
  meta/ogg_vorbis.c
  meta/ogl.c
  meta/omu.c
  meta/opus.c
  meta/opus_ppp.c
  meta/otm.c
  meta/p3d.c
  meta/pc_adp.c
  meta/pc_adp_otns.c
  meta/pc_al2.c
  meta/pc_ast.c
  meta/pc_mxst.c
  meta/pc_snds.c
  meta/pc_xa30.c
  meta/pcm_sre.c
  meta/pona.c
  meta/pos.c
  meta/ppst.c
  meta/ps2_2pfs.c
  meta/ps2_adm.c
  meta/ps2_ads.c
  meta/ps2_ass.c
  meta/ps2_ast.c
  meta/ps2_b1s.c
  meta/ps2_bg00.c
  meta/ps2_bmdx.c
  meta/ps2_ccc.c
  meta/ps2_dxh.c
  meta/ps2_enth.c
  meta/ps2_exst.c
  meta/ps2_filp.c
  meta/ps2_gbts.c
  meta/ps2_gcm.c
  meta/ps2_hgc1.c
  meta/ps2_hsf.c
  meta/ps2_iab.c
  meta/ps2_ikm.c
  meta/ps2_ild.c
  meta/ps2_int.c
  meta/ps2_joe.c
  meta/ps2_jstm.c
  meta/ps2_kces.c
  meta/ps2_leg.c
  meta/ps2_lpcm.c
  meta/ps2_mcg.c
  meta/ps2_mic.c
  meta/ps2_mihb.c
  meta/ps2_msa.c
  meta/ps2_mtaf.c
  meta/ps2_npsf.c
  meta/ps2_p2bt.c
  meta/ps2_pcm.c
  meta/ps2_pnb.c
  meta/ps2_rnd.c
  meta/ps2_rstm.c
  meta/ps2_rxws.c
  meta/ps2_sfs.c
  meta/ps2_sl3.c
  meta/ps2_smpl.c
  meta/ps2_snd.c
  meta/ps2_spm.c
  meta/ps2_sps.c
  meta/ps2_ster.c
  meta/ps2_svag.c
  meta/ps2_svag_snk.c
  meta/ps2_tec.c
  meta/ps2_tk5.c
  meta/ps2_va3.c
  meta/ps2_vas.c
  meta/ps2_vbk.c
  meta/ps2_vds_vdm.c
  meta/ps2_vgs.c
  meta/ps2_vgv.c
  meta/ps2_vms.c
  meta/ps2_voi.c
  meta/ps2_wad.c
  meta/ps2_wb.c
  meta/ps2_wmus.c
  meta/ps2_xa2.c
  meta/ps2_xa2_rrp.c
  meta/ps2_xa30.c
  meta/ps3_cps.c
  meta/ps3_ivag.c
  meta/ps3_msf.c
  meta/ps3_mta2.c
  meta/ps3_past.c
  meta/ps_headerless.c
  meta/psx_gms.c
  meta/raw.c
  meta/redspark.c
  meta/rfrm.c
  meta/riff.c
  meta/rkv.c
  meta/rs03.c
  meta/rsd.c
  meta/rsf.c
  meta/rws.c
  meta/rwsd.c
  meta/rwx.c
  meta/s14_sss.c
  meta/sab.c
  meta/sat_baka.c
  meta/sat_dvi.c
  meta/sat_sap.c
  meta/scd_pcm.c
  meta/sd9.c
  meta/sdf.c
  meta/sdt.c
  meta/seg.c
  meta/sfl.c
  meta/sgxd.c
  meta/sk_aud.c
  meta/sli.c
  meta/smc_smh.c
  meta/smp.c
  meta/smv.c
  meta/sps_n1.c
  meta/spt_spd.c
  meta/sqex_scd.c
  meta/sqex_scd_sscf.c
  meta/sqex_sead.c
  meta/sthd.c
  meta/stm.c
  meta/str_asr.c
  meta/str_snds.c
  meta/str_wav.c
  meta/stx.c
  meta/svg.c
  meta/svs.c
  meta/sxd.c
  meta/ta_aac.c
  meta/thp.c
  meta/tun.c
  meta/txth.c
  meta/txtp.c
  meta/ubi_bao.c
  meta/ubi_ckd.c
  meta/ubi_jade.c
  meta/ubi_lyn.c
  meta/ubi_raki.c
  meta/ubi_sb.c
  meta/ue4opus.c
  meta/utk.c
  meta/vag.c
  meta/vai.c
  meta/vawx.c
  meta/vgs.c
  meta/vis.c
  meta/vpk.c
  meta/vs.c
  meta/vs_square.c
  meta/vs_str.c
  meta/vsf.c
  meta/vsf_tta.c
  meta/vsv.c
  meta/vxn.c
  meta/waf.c
  meta/wave.c
  meta/wave_segmented.c
  meta/wavebatch.c
  meta/wii_04sw.c
  meta/wii_bns.c
  meta/wii_mus.c
  meta/wii_ras.c
  meta/wii_sng.c
  meta/wii_sts.c
  meta/wpd.c
  meta/ws_aud.c
  meta/wsi.c
  meta/wv2.c
  meta/wv6.c
  meta/wvs.c
  meta/wwise.c
  meta/x360_ast.c
  meta/x360_cxs.c
  meta/x360_pasx.c
  meta/x360_tra.c
  meta/xa.c
  meta/xau.c
  meta/xau_konami.c
  meta/xbox_hlwav.c
  meta/xbox_ims.c
  meta/xbox_wavm.c
  meta/xbox_xmu.c
  meta/xbox_xvas.c
  meta/xma.c
  meta/xmd.c
  meta/xnb.c
  meta/xopus.c
  meta/xpcm.c
  meta/xps.c
  meta/xss.c
  meta/xvag.c
  meta/xwb.c
  meta/xwc.c
  meta/xwma.c
  meta/ydsp.c
  meta/zsd.c
  meta/zsnd.c
  meta/zwdsp.c
  plugins.c
  streamfile.c
  util.c
  vgmstream.c
)

add_library(vgmstream STATIC ${HEADERS} ${SOURCES})

target_link_libraries(vgmstream clHCA m)

# This is needed on Unix-based systems
# so that linking this static library into a shared library (i.e. a plugin) works.
set_target_properties(vgmstream
  PROPERTIES POSITION_INDEPENDENT_CODE True)
