cmake_minimum_required(VERSION 2.6)

set(VERSION "2018-01-11")
set(ZIP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/SDK-${VERSION}.zip")
set(SDK_DOWNLOAD_PAGE "${CMAKE_CURRENT_SOURCE_DIR}/SDK.html")
set(PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/SDK-${VERSION}")

if(NOT IS_DIRECTORY "${PREFIX}")
  if(NOT EXISTS "${ZIP_FILE}")
    message(STATUS "Downloading foobar2000 SDK...")
    file(DOWNLOAD "https://www.foobar2000.org/SDK" "${SDK_DOWNLOAD_PAGE}")
    file(READ "${SDK_DOWNLOAD_PAGE}" SDK_PAGE_CONTENTS)
    file(REMOVE "${SDK_DOWNLOAD_PAGE}")
    if(SDK_PAGE_CONTENTS MATCHES "/([a-f0-9]+)/SDK-${VERSION}\\.zip")
      file(DOWNLOAD "https://www.foobar2000.org/files/${CMAKE_MATCH_1}/SDK-${VERSION}.zip" "${ZIP_FILE}")
    else()
      message(FATAL_ERROR "Unable to find the path to the foobar2000 SDK from the SDK download page")
    endif()
  endif()

  if(EXISTS "${ZIP_FILE}")
    file(MAKE_DIRECTORY "${PREFIX}")
    execute_process(
      COMMAND "${CMAKE_COMMAND}" -E tar xf "${ZIP_FILE}"
      WORKING_DIRECTORY "${PREFIX}"
    )
  endif()
endif()

add_library(foobar2000_component_client STATIC
  "${PREFIX}/foobar2000/foobar2000_component_client/component_client.cpp"
)
target_compile_definitions(foobar2000_component_client PUBLIC
  UNICODE
  _UNICODE
)
target_link_libraries(foobar2000_component_client pfc)

set(FB2K_SDK_HEADERS
  "${PREFIX}/foobar2000/SDK/abort_callback.h"
  "${PREFIX}/foobar2000/SDK/advconfig.h"
  "${PREFIX}/foobar2000/SDK/album_art.h"
  "${PREFIX}/foobar2000/SDK/album_art_helpers.h"
  "${PREFIX}/foobar2000/SDK/app_close_blocker.h"
  "${PREFIX}/foobar2000/SDK/audio_chunk.h"
  "${PREFIX}/foobar2000/SDK/audio_chunk_impl.h"
  "${PREFIX}/foobar2000/SDK/audio_postprocessor.h"
  "${PREFIX}/foobar2000/SDK/autoplaylist.h"
  "${PREFIX}/foobar2000/SDK/cfg_var.h"
  "${PREFIX}/foobar2000/SDK/chapterizer.h"
  "${PREFIX}/foobar2000/SDK/commandline.h"
  "${PREFIX}/foobar2000/SDK/commonObjects.h"
  "${PREFIX}/foobar2000/SDK/completion_notify.h"
  "${PREFIX}/foobar2000/SDK/component.h"
  "${PREFIX}/foobar2000/SDK/componentversion.h"
  "${PREFIX}/foobar2000/SDK/config_io_callback.h"
  "${PREFIX}/foobar2000/SDK/config_object.h"
  "${PREFIX}/foobar2000/SDK/config_object_impl.h"
  "${PREFIX}/foobar2000/SDK/console.h"
  "${PREFIX}/foobar2000/SDK/contextmenu.h"
  "${PREFIX}/foobar2000/SDK/contextmenu_manager.h"
  "${PREFIX}/foobar2000/SDK/core_api.h"
  "${PREFIX}/foobar2000/SDK/coreversion.h"
  "${PREFIX}/foobar2000/SDK/decode_postprocessor.h"
  "${PREFIX}/foobar2000/SDK/dsp.h"
  "${PREFIX}/foobar2000/SDK/dsp_manager.h"
  "${PREFIX}/foobar2000/SDK/event_logger.h"
  "${PREFIX}/foobar2000/SDK/exceptions.h"
  "${PREFIX}/foobar2000/SDK/file_format_sanitizer.h"
  "${PREFIX}/foobar2000/SDK/file_info.h"
  "${PREFIX}/foobar2000/SDK/file_info_impl.h"
  "${PREFIX}/foobar2000/SDK/file_operation_callback.h"
  "${PREFIX}/foobar2000/SDK/filesystem.h"
  "${PREFIX}/foobar2000/SDK/filesystem_helper.h"
  "${PREFIX}/foobar2000/SDK/foobar2000-dsp.h"
  "${PREFIX}/foobar2000/SDK/foobar2000-pfc.h"
  "${PREFIX}/foobar2000/SDK/foobar2000-winver.h"
  "${PREFIX}/foobar2000/SDK/foobar2000.h"
  "${PREFIX}/foobar2000/SDK/genrand.h"
  "${PREFIX}/foobar2000/SDK/hasher_md5.h"
  "${PREFIX}/foobar2000/SDK/http_client.h"
  "${PREFIX}/foobar2000/SDK/icon_remap.h"
  "${PREFIX}/foobar2000/SDK/info_lookup_handler.h"
  "${PREFIX}/foobar2000/SDK/initquit.h"
  "${PREFIX}/foobar2000/SDK/input.h"
  "${PREFIX}/foobar2000/SDK/input_file_type.h"
  "${PREFIX}/foobar2000/SDK/input_impl.h"
  "${PREFIX}/foobar2000/SDK/library_manager.h"
  "${PREFIX}/foobar2000/SDK/link_resolver.h"
  "${PREFIX}/foobar2000/SDK/main_thread_callback.h"
  "${PREFIX}/foobar2000/SDK/mem_block_container.h"
  "${PREFIX}/foobar2000/SDK/menu.h"
  "${PREFIX}/foobar2000/SDK/menu_helpers.h"
  "${PREFIX}/foobar2000/SDK/message_loop.h"
  "${PREFIX}/foobar2000/SDK/metadb.h"
  "${PREFIX}/foobar2000/SDK/metadb_handle.h"
  "${PREFIX}/foobar2000/SDK/modeless_dialog.h"
  "${PREFIX}/foobar2000/SDK/ole_interaction.h"
  "${PREFIX}/foobar2000/SDK/output.h"
  "${PREFIX}/foobar2000/SDK/packet_decoder.h"
  "${PREFIX}/foobar2000/SDK/play_callback.h"
  "${PREFIX}/foobar2000/SDK/playable_location.h"
  "${PREFIX}/foobar2000/SDK/playback_control.h"
  "${PREFIX}/foobar2000/SDK/playback_stream_capture.h"
  "${PREFIX}/foobar2000/SDK/playlist.h"
  "${PREFIX}/foobar2000/SDK/playlist_loader.h"
  "${PREFIX}/foobar2000/SDK/popup_message.h"
  "${PREFIX}/foobar2000/SDK/preferences_page.h"
  "${PREFIX}/foobar2000/SDK/progress_meter.h"
  "${PREFIX}/foobar2000/SDK/replaygain.h"
  "${PREFIX}/foobar2000/SDK/replaygain_scanner.h"
  "${PREFIX}/foobar2000/SDK/resampler.h"
  "${PREFIX}/foobar2000/SDK/search_tools.h"
  "${PREFIX}/foobar2000/SDK/service.h"
  "${PREFIX}/foobar2000/SDK/service_by_guid.h"
  "${PREFIX}/foobar2000/SDK/service_factory.h"
  "${PREFIX}/foobar2000/SDK/service_impl.h"
  "${PREFIX}/foobar2000/SDK/system_time_keeper.h"
  "${PREFIX}/foobar2000/SDK/tag_processor.h"
  "${PREFIX}/foobar2000/SDK/threaded_process.h"
  "${PREFIX}/foobar2000/SDK/titleformat.h"
  "${PREFIX}/foobar2000/SDK/track_property.h"
  "${PREFIX}/foobar2000/SDK/ui.h"
  "${PREFIX}/foobar2000/SDK/ui_edit_context.h"
  "${PREFIX}/foobar2000/SDK/ui_element.h"
  "${PREFIX}/foobar2000/SDK/unpack.h"
  "${PREFIX}/foobar2000/SDK/vis.h"
)
set(FB2K_SDK_SOURCES
  "${PREFIX}/foobar2000/SDK/abort_callback.cpp"
  "${PREFIX}/foobar2000/SDK/advconfig.cpp"
  "${PREFIX}/foobar2000/SDK/album_art.cpp"
  "${PREFIX}/foobar2000/SDK/app_close_blocker.cpp"
  "${PREFIX}/foobar2000/SDK/audio_chunk.cpp"
  "${PREFIX}/foobar2000/SDK/audio_chunk_channel_config.cpp"
  "${PREFIX}/foobar2000/SDK/cfg_var.cpp"
  "${PREFIX}/foobar2000/SDK/chapterizer.cpp"
  "${PREFIX}/foobar2000/SDK/commandline.cpp"
  "${PREFIX}/foobar2000/SDK/completion_notify.cpp"
  "${PREFIX}/foobar2000/SDK/componentversion.cpp"
  "${PREFIX}/foobar2000/SDK/config_object.cpp"
  "${PREFIX}/foobar2000/SDK/console.cpp"
  "${PREFIX}/foobar2000/SDK/dsp.cpp"
  "${PREFIX}/foobar2000/SDK/dsp_manager.cpp"
  "${PREFIX}/foobar2000/SDK/file_cached_impl.cpp"
  "${PREFIX}/foobar2000/SDK/file_info.cpp"
  "${PREFIX}/foobar2000/SDK/file_info_impl.cpp"
  "${PREFIX}/foobar2000/SDK/file_info_merge.cpp"
  "${PREFIX}/foobar2000/SDK/file_operation_callback.cpp"
  "${PREFIX}/foobar2000/SDK/filesystem.cpp"
  "${PREFIX}/foobar2000/SDK/filesystem_helper.cpp"
  "${PREFIX}/foobar2000/SDK/guids.cpp"
  "${PREFIX}/foobar2000/SDK/hasher_md5.cpp"
  "${PREFIX}/foobar2000/SDK/input.cpp"
  "${PREFIX}/foobar2000/SDK/input_file_type.cpp"
  "${PREFIX}/foobar2000/SDK/link_resolver.cpp"
  "${PREFIX}/foobar2000/SDK/mainmenu.cpp"
  "${PREFIX}/foobar2000/SDK/main_thread_callback.cpp"
  "${PREFIX}/foobar2000/SDK/mem_block_container.cpp"
  "${PREFIX}/foobar2000/SDK/menu_helpers.cpp"
  "${PREFIX}/foobar2000/SDK/menu_item.cpp"
  "${PREFIX}/foobar2000/SDK/menu_manager.cpp"
  "${PREFIX}/foobar2000/SDK/metadb.cpp"
  "${PREFIX}/foobar2000/SDK/metadb_handle.cpp"
  "${PREFIX}/foobar2000/SDK/metadb_handle_list.cpp"
  "${PREFIX}/foobar2000/SDK/output.cpp"
  "${PREFIX}/foobar2000/SDK/packet_decoder.cpp"
  "${PREFIX}/foobar2000/SDK/playable_location.cpp"
  "${PREFIX}/foobar2000/SDK/playback_control.cpp"
  "${PREFIX}/foobar2000/SDK/playlist.cpp"
  "${PREFIX}/foobar2000/SDK/playlist_loader.cpp"
  "${PREFIX}/foobar2000/SDK/popup_message.cpp"
  "${PREFIX}/foobar2000/SDK/preferences_page.cpp"
  "${PREFIX}/foobar2000/SDK/replaygain.cpp"
  "${PREFIX}/foobar2000/SDK/replaygain_info.cpp"
  "${PREFIX}/foobar2000/SDK/search_tools.cpp"
  "${PREFIX}/foobar2000/SDK/service.cpp"
  "${PREFIX}/foobar2000/SDK/stdafx.cpp"
  "${PREFIX}/foobar2000/SDK/tag_processor.cpp"
  "${PREFIX}/foobar2000/SDK/tag_processor_id3v2.cpp"
  "${PREFIX}/foobar2000/SDK/threaded_process.cpp"
  "${PREFIX}/foobar2000/SDK/titleformat.cpp"
  "${PREFIX}/foobar2000/SDK/ui.cpp"
  "${PREFIX}/foobar2000/SDK/ui_element.cpp"
  "${PREFIX}/foobar2000/SDK/utility.cpp"
)
add_library(foobar2000_SDK STATIC "${FB2K_SDK_HEADERS}" "${FB2K_SDK_SOURCES}")
target_include_directories(foobar2000_SDK INTERFACE
  "${PREFIX}/foobar2000/SDK"
)
target_link_libraries(foobar2000_SDK foobar2000_component_client foobar2000_sdk_helpers pfc)

set(FB2K_SDK_HELPERS_HEADERS
  "${PREFIX}/foobar2000/helpers/advconfig_runtime.h"
  "${PREFIX}/foobar2000/helpers/album_art_helpers.h"
  "${PREFIX}/foobar2000/helpers/CmdThread.h"
  "${PREFIX}/foobar2000/helpers/CPowerRequest.h"
  "${PREFIX}/foobar2000/helpers/CPropVariant.h"
  "${PREFIX}/foobar2000/helpers/CSingleThreadWrapper.h"
  "${PREFIX}/foobar2000/helpers/duration_counter.h"
  "${PREFIX}/foobar2000/helpers/fb2k_threads.h"
  "${PREFIX}/foobar2000/helpers/fb2k_wfx.h"
  "${PREFIX}/foobar2000/helpers/fileReadAhead.h"
  "${PREFIX}/foobar2000/helpers/fullFileBuffer.h"
  "${PREFIX}/foobar2000/helpers/bitreader_helper.h"
  "${PREFIX}/foobar2000/helpers/CallForwarder.h"
  "${PREFIX}/foobar2000/helpers/cfg_guidlist.h"
  "${PREFIX}/foobar2000/helpers/clipboard.h"
  "${PREFIX}/foobar2000/helpers/COM_utils.h"
  "${PREFIX}/foobar2000/helpers/create_directory_helper.h"
  "${PREFIX}/foobar2000/helpers/cue_creator.h"
  "${PREFIX}/foobar2000/helpers/cue_parser.h"
  "${PREFIX}/foobar2000/helpers/cuesheet_index_list.h"
  "${PREFIX}/foobar2000/helpers/dialog_resize_helper.h"
  "${PREFIX}/foobar2000/helpers/dropdown_helper.h"
  "${PREFIX}/foobar2000/helpers/dynamic_bitrate_helper.h"
  "${PREFIX}/foobar2000/helpers/file_cached.h"
  "${PREFIX}/foobar2000/helpers/file_info_const_impl.h"
  "${PREFIX}/foobar2000/helpers/file_list_helper.h"
  "${PREFIX}/foobar2000/helpers/file_move_helper.h"
  "${PREFIX}/foobar2000/helpers/file_win32_wrapper.h"
  "${PREFIX}/foobar2000/helpers/filetimetools.h"
  "${PREFIX}/foobar2000/helpers/gdiplus_helpers.h"
  "${PREFIX}/foobar2000/helpers/helpers.h"
  "${PREFIX}/foobar2000/helpers/icon_remapping_wildcard.h"
  "${PREFIX}/foobar2000/helpers/IDataObjectUtils.h"
  "${PREFIX}/foobar2000/helpers/input_fix_seeking.h"
  "${PREFIX}/foobar2000/helpers/input_helpers.h"
  "${PREFIX}/foobar2000/helpers/input_stream_info_reader.h"
  "${PREFIX}/foobar2000/helpers/listview_helper.h"
  "${PREFIX}/foobar2000/helpers/meta_table_builder.h"
  "${PREFIX}/foobar2000/helpers/metadb_io_hintlist.h"
  "${PREFIX}/foobar2000/helpers/mp3_utils.h"
  "${PREFIX}/foobar2000/helpers/playlist_position_reference_tracker.h"
  "${PREFIX}/foobar2000/helpers/ProcessUtils.h"
  "${PREFIX}/foobar2000/helpers/ProfileCache.h"
  "${PREFIX}/foobar2000/helpers/readers.h"
  "${PREFIX}/foobar2000/helpers/reader_pretend_nonseekable.h"
  "${PREFIX}/foobar2000/helpers/rethrow.h"
  "${PREFIX}/foobar2000/helpers/seekabilizer.h"
  "${PREFIX}/foobar2000/helpers/SmartStrStr.h"
  "${PREFIX}/foobar2000/helpers/StdAfx.h"
  "${PREFIX}/foobar2000/helpers/stream_buffer_helper.h"
  "${PREFIX}/foobar2000/helpers/tag_write_callback_impl.h"
  "${PREFIX}/foobar2000/helpers/text_file_loader.h"
  "${PREFIX}/foobar2000/helpers/ThreadUtils.h"
  "${PREFIX}/foobar2000/helpers/TypeFind.h"
  "${PREFIX}/foobar2000/helpers/VisUtils.h"
  "${PREFIX}/foobar2000/helpers/win32_dialog.h"
  "${PREFIX}/foobar2000/helpers/win32_misc.h"
  "${PREFIX}/foobar2000/helpers/win32_op.h"
  "${PREFIX}/foobar2000/helpers/window_placement_helper.h"
  "${PREFIX}/foobar2000/helpers/writer_wav.h"
)
set(FB2K_SDK_HELPERS_SOURCES
  "${PREFIX}/foobar2000/helpers/clipboard.cpp"
  "${PREFIX}/foobar2000/helpers/CPowerRequest.cpp"
  "${PREFIX}/foobar2000/helpers/create_directory_helper.cpp"
  "${PREFIX}/foobar2000/helpers/cue_creator.cpp"
  "${PREFIX}/foobar2000/helpers/cue_parser.cpp"
  "${PREFIX}/foobar2000/helpers/cue_parser_embedding.cpp"
  "${PREFIX}/foobar2000/helpers/cuesheet_index_list.cpp"
  "${PREFIX}/foobar2000/helpers/dialog_resize_helper.cpp"
  "${PREFIX}/foobar2000/helpers/dropdown_helper.cpp"
  "${PREFIX}/foobar2000/helpers/dynamic_bitrate_helper.cpp"
  "${PREFIX}/foobar2000/helpers/file_info_const_impl.cpp"
  "${PREFIX}/foobar2000/helpers/file_list_helper.cpp"
  "${PREFIX}/foobar2000/helpers/file_move_helper.cpp"
  "${PREFIX}/foobar2000/helpers/filetimetools.cpp"
  "${PREFIX}/foobar2000/helpers/file_win32_wrapper.cpp"
  "${PREFIX}/foobar2000/helpers/IDataObjectUtils.cpp"
  "${PREFIX}/foobar2000/helpers/input_helpers.cpp"
  "${PREFIX}/foobar2000/helpers/listview_helper.cpp"
  "${PREFIX}/foobar2000/helpers/mp3_utils.cpp"
  "${PREFIX}/foobar2000/helpers/readers.cpp"
  "${PREFIX}/foobar2000/helpers/seekabilizer.cpp"
  "${PREFIX}/foobar2000/helpers/SmartStrStr.cpp"
  "${PREFIX}/foobar2000/helpers/StdAfx.cpp"
  "${PREFIX}/foobar2000/helpers/stream_buffer_helper.cpp"
  "${PREFIX}/foobar2000/helpers/text_file_loader.cpp"
  "${PREFIX}/foobar2000/helpers/ThreadUtils.cpp"
  "${PREFIX}/foobar2000/helpers/VisUtils.cpp"
  "${PREFIX}/foobar2000/helpers/win32_dialog.cpp"
  "${PREFIX}/foobar2000/helpers/win32_misc.cpp"
  "${PREFIX}/foobar2000/helpers/window_placement_helper.cpp"
  "${PREFIX}/foobar2000/helpers/writer_wav.cpp"
)
add_library(foobar2000_sdk_helpers STATIC "${FB2K_SDK_HELPERS_HEADERS}" "${FB2K_SDK_HELPERS_SOURCES}")
target_compile_definitions(foobar2000_sdk_helpers PUBLIC
  UNICODE
  _UNICODE
)
target_include_directories(foobar2000_sdk_helpers PRIVATE
  "${PREFIX}"
)
target_link_libraries(foobar2000_sdk_helpers pfc)

add_library(foobar2000_shared STATIC IMPORTED GLOBAL)
target_include_directories(foobar2000_shared INTERFACE
  "${PREFIX}/foobar2000/shared"
)
set_target_properties(foobar2000_shared
  PROPERTIES
    IMPORTED_LOCATION "${PREFIX}/foobar2000/shared/shared.lib"
)

add_library(foobar2000 INTERFACE)
target_include_directories(foobar2000 INTERFACE
  "${PREFIX}/foobar2000"
)
target_link_libraries(foobar2000 INTERFACE
  wtl # for ATLHelpers
)

set(PFC_HEADERS
  "${PREFIX}/pfc/alloc.h"
  "${PREFIX}/pfc/array.h"
  "${PREFIX}/pfc/audio_sample.h"
  "${PREFIX}/pfc/avltree.h"
  "${PREFIX}/pfc/base64.h"
  "${PREFIX}/pfc/binary_search.h"
  "${PREFIX}/pfc/bit_array.h"
  "${PREFIX}/pfc/bit_array_impl.h"
  "${PREFIX}/pfc/bit_array_impl_part2.h"
  "${PREFIX}/pfc/bsearch.h"
  "${PREFIX}/pfc/bsearch_inline.h"
  "${PREFIX}/pfc/byte_order_helper.h"
  "${PREFIX}/pfc/chain_list_v2.h"
  "${PREFIX}/pfc/com_ptr_t.h"
  "${PREFIX}/pfc/cpuid.h"
  "${PREFIX}/pfc/event.h"
  "${PREFIX}/pfc/filehandle.h"
  "${PREFIX}/pfc/guid.h"
  "${PREFIX}/pfc/instance_tracker.h"
  "${PREFIX}/pfc/int_types.h"
  "${PREFIX}/pfc/iterators.h"
  "${PREFIX}/pfc/list.h"
  "${PREFIX}/pfc/lockless.h"
  "${PREFIX}/pfc/map.h"
  "${PREFIX}/pfc/memalign.h"
  "${PREFIX}/pfc/nix-objects.h"
  "${PREFIX}/pfc/order_helper.h"
  "${PREFIX}/pfc/other.h"
  "${PREFIX}/pfc/pathUtils.h"
  "${PREFIX}/pfc/pfc.h"
  "${PREFIX}/pfc/pocket_char_ops.h"
  "${PREFIX}/pfc/pool.h"
  "${PREFIX}/pfc/pp-gettickcount.h"
  "${PREFIX}/pfc/pp-winapi.h"
  "${PREFIX}/pfc/primitives.h"
  "${PREFIX}/pfc/primitives_part2.h"
  "${PREFIX}/pfc/ptrholder.h"
  "${PREFIX}/pfc/ptr_list.h"
  "${PREFIX}/pfc/rcptr.h"
  "${PREFIX}/pfc/ref_counter.h"
  "${PREFIX}/pfc/sort.h"
  "${PREFIX}/pfc/splitString.h"
  "${PREFIX}/pfc/string8_impl.h"
  "${PREFIX}/pfc/string_base.h"
  "${PREFIX}/pfc/string_conv.h"
  "${PREFIX}/pfc/string_list.h"
  "${PREFIX}/pfc/stringNew.h"
  "${PREFIX}/pfc/suppress_fb2k_hooks.h"
  "${PREFIX}/pfc/syncd_storage.h"
  "${PREFIX}/pfc/synchro.h"
  "${PREFIX}/pfc/synchro_win.h"
  "${PREFIX}/pfc/threads.h"
  "${PREFIX}/pfc/timers.h"
  "${PREFIX}/pfc/traits.h"
  "${PREFIX}/pfc/wait_queue.h"
  "${PREFIX}/pfc/wildcard.h"
  "${PREFIX}/pfc/win-objects.h"
)
set(PFC_SOURCES
  "${PREFIX}/pfc/audio_math.cpp"
  "${PREFIX}/pfc/audio_sample.cpp"
  "${PREFIX}/pfc/base64.cpp"
  "${PREFIX}/pfc/bit_array.cpp"
  "${PREFIX}/pfc/bsearch.cpp"
  "${PREFIX}/pfc/cpuid.cpp"
  "${PREFIX}/pfc/filehandle.cpp"
  "${PREFIX}/pfc/guid.cpp"
  "${PREFIX}/pfc/nix-objects.cpp"
  "${PREFIX}/pfc/other.cpp"
  "${PREFIX}/pfc/pathUtils.cpp"
  "${PREFIX}/pfc/printf.cpp"
  "${PREFIX}/pfc/selftest.cpp"
  "${PREFIX}/pfc/sort.cpp"
  "${PREFIX}/pfc/stdafx.cpp"
  "${PREFIX}/pfc/string_base.cpp"
  "${PREFIX}/pfc/string_conv.cpp"
  "${PREFIX}/pfc/stringNew.cpp"
  "${PREFIX}/pfc/threads.cpp"
  "${PREFIX}/pfc/timers.cpp"
  "${PREFIX}/pfc/utf8.cpp"
  "${PREFIX}/pfc/wildcard.cpp"
  "${PREFIX}/pfc/win-objects.cpp"
)
add_library(pfc STATIC "${PFC_HEADERS}" "${PFC_SOURCES}")
